# PicoTest

./: CMakeLists.txt
.cache/clangd/index/: main.c.A40744D8ED05980B.idx
src/: main.c  send_to_pico.sh  serial_listener.py
